# PrettyPatterns

./: CMakeLists.txt  Makefile  README.md
src/: main.c  patterns.c  patterns.h
